--- a/src/main/resources/known-issues.json
+++ b/src/main/resources/known-issues.json
@@ -1,2 +1,7 @@
 {
+"TEST-1": {
+    "type": "Internal",
+	"assertionPattern": ".*number of elements is a value equal.*",
+	"storyPattern":"Task_4_a.*"
+    }
 }
